--- a/src/views/style.css
+++ b/src/views/style.css
@@ -111,3 +111,82 @@ margin-left:10px ;
 margin-left: 30px;
 margin-bottom: 10px;
 }
+#bg-color{
+  width: 100%;
+  height: 745px;
+  background-image: url("../assets/img/bg.svg");
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+#container{
+  width: 40%;
+  height: 60%;
+  background-color: white;
+  border-radius: 4px;
+  position: relative;
+}
+#sign-sec{
+  width:50%;
+  height: 100%;
+  background-color: #095DFE;
+}
+#h1{
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin:  60px 150px; 
+  text-align: center;
+color: #333;
+}
+#input{
+  width: 280px;
+  margin:  50px 230px;
+  margin-bottom: 40px;
+}
+input{
+  margin: 10px;
+  height: 42px;
+  width: 200px;
+  -webkit-appearance: none;
+  border-radius: 3px;
+  border: none;
+  background-color: #eee;
+  padding: 8px 5px;
+  
+}
+input:focus {
+  outline: none; 
+  border: 2px solid #095DFE;
+}
+#mdp{
+  color: #333;
+font-size: 14px;
+text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+#login-btn{
+  
+  background-color: #095DFE;
+  border-radius: 2px;
+  border: none;
+  padding: 10px 20px;
+  margin: 3% 40% ;
+  cursor: pointer;
+  color:white;
+}
+#login-btn:hover{
+  background-color: #0b2d6e;
+ transition: 1s ease;
+}
+#mail{
+  margin-bottom:10px;
+  width: 250px;
+}
+#pwd{
+  margin-bottom:10px;
+  width: 250px;
+}
